[package]
name = "llm-inference-gateway"
description = "Enterprise-grade LLM Inference Gateway with OpenAI-compatible API"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "LicenseRef-LLM-DevOps-Commercial"
repository = "https://github.com/llm-devops/llm-inference-gateway"
authors = ["LLM DevOps Team"]
keywords = ["llm", "gateway", "openai", "api", "inference"]
categories = ["web-programming", "api-bindings"]

[[bin]]
name = "llm-inference-gateway"
path = "src/main.rs"

[dependencies]
gateway-core = { path = "crates/gateway-core" }
gateway-config = { path = "crates/gateway-config" }
gateway-providers = { path = "crates/gateway-providers" }
gateway-routing = { path = "crates/gateway-routing" }
gateway-resilience = { path = "crates/gateway-resilience" }
gateway-telemetry = { path = "crates/gateway-telemetry" }
gateway-server = { path = "crates/gateway-server" }

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"

[workspace]
resolver = "2"
members = [
    "crates/gateway-core",
    "crates/gateway-config",
    "crates/gateway-providers",
    "crates/gateway-routing",
    "crates/gateway-resilience",
    "crates/gateway-telemetry",
    "crates/gateway-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "LicenseRef-LLM-DevOps-Commercial"
repository = "https://github.com/llm-devops/llm-inference-gateway"
authors = ["LLM DevOps Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "timeout", "request-id"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Observability
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.25"

# Concurrency
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
url = "2.5"
humantime-serde = "1.1"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
regex = "1.10"
notify = "6.1"
pin-project-lite = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
http = "1.1"
http-body-util = "0.1"
mime = "0.3"

# Internal crates
gateway-core = { path = "crates/gateway-core" }
gateway-config = { path = "crates/gateway-config" }
gateway-providers = { path = "crates/gateway-providers" }
gateway-routing = { path = "crates/gateway-routing" }
gateway-resilience = { path = "crates/gateway-resilience" }
gateway-telemetry = { path = "crates/gateway-telemetry" }
gateway-server = { path = "crates/gateway-server" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow specific patterns that are acceptable in this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"  # Many functions could be const but aren't critical
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"  # Configuration structs often have many boolean flags
option_if_let_else = "allow"  # Sometimes if-let-else is more readable
similar_names = "allow"  # Configuration variables often have similar names
unnecessary_wraps = "allow"  # Sometimes Result wrapping is for API consistency
used_underscore_binding = "allow"  # Required for serde field renames
match_same_arms = "allow"  # Sometimes explicit arms improve readability
struct_field_names = "allow"  # API types have standardized field naming conventions
unused_self = "allow"  # Methods sometimes need &self for trait consistency
or_fun_call = "allow"  # Sometimes or() is clearer than or_else()
type_complexity = "allow"  # Complex types are sometimes needed for internal APIs
match_wildcard_for_single_variants = "allow"  # Wildcard matches provide future-proofing
assigning_clones = "allow"  # Sometimes explicit clone assignment is clearer
# Casts that are common and usually acceptable
cast_possible_truncation = "allow"  # Common in network/serialization code
cast_sign_loss = "allow"  # Usually intentional in API boundaries
cast_precision_loss = "allow"  # Often acceptable in metrics/statistics
cast_possible_wrap = "allow"  # Common in indexed access
# Strict rules for production safety
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
